// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="cqkmbci soui-textarea-wrapper c-xx38je soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="cqkmbci soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px;"
  />
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea c5omvvl soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="cqkmbci soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="cf7vjpo soui-textarea-wrapper-padding-box c-cudno soui-textarea-footer"
  >
    <div
      style="text-align: end;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="cqkmbci soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="cqkmbci soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cqkmbci soui-textarea-wrapper c-xpz8i3 soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="cqkmbci soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="cqkmbci soui-textarea-wrapper c-xu140n soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cf7vjpo soui-textarea-wrapper-padding-box cji3f5r soui-textarea-wrapper-inner-title-bottom c-atqm2t soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
